--- a/kod-html/kontakt/kontakt.html
+++ b/kod-html/kontakt/kontakt.html
@@ -6,46 +6,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontakt - Golfklubb</title>
     <link rel="stylesheet" href="/kod-css/kontaktstyle.css">
+    <link rel="stylesheet" href="/kod-css/golfklubb-style.css">
 </head>
 
 <body>
 
-   <!----Adinas nav del---->
-   <div class="top-nav">
-    <ul class="menu">
-        <li><a href="#">Hem</a></li>
+   <!-- Adinas nav del -->
 
-        <li><a href="#">Spela golf</a>
-            <ul class="dropdown-spela">
-                <li><a href="#">Företag</a></li>
-                <li><a href="#">Gäst</a></li>
-                <li><a href="#">Tävlingar/<br>Evenemang</a></li>
+
+    <div class="top-nav">
+        <ul class="menu">
+            <li><a href="/kod-html/hem/index.html">Hem</a></li>
+
+            <li><a href="#">Spela golf</a>
+                <ul class="dropdown-spela">
+                    <li><a href="/kod-html/spela-golf/foretag.html">Företag</a></li>
+                    <li><a href="/kod-html/spela-golf/gast.html">Gäst</a></li>
+                     <li><a href="/kod-html/spela-golf/grenfee-regler.html">Greenfee & Regler</a></li>
+                    <li><a href="/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html">Tävlingar/<br>Evenemang</a></li>
+                </ul>
+            </li>
+
+            <li><a href="#">Om oss</a>
+                <ul class="dropdown">
+                    <li><a href="/kod-html/Omoss/visiontest2.html">Historia och vision</a></li>
+                    <li><a href="/kod-html/Omoss/banorna.html">Våra banor</a></li>
+                    <li><a href="/kod-html/Omoss/faciliteter.html">Faciliteter</a></li>
+                    <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
+                    <li><a href="/kod-html/Omoss/nyheter.html">Nyheter</a></li>
+                </ul>
+            </li>
+
+            <li><a href="#">Medlem</a>
+                <ul class="dropdown-medlem">
+                    <li><a href="/kod-html/medlem/medlem.html">Logga in</a></li>
+                    <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
+                    <li><a href="/kod-html/medlem/medlem.html">Förmåner</a></li>
+                    <li><a href="/kod-html/medlem/bokning.html">Bokning</a></li>
+                    <li><a href="/kod-html/medlem/createnewmember.html">Förmåner</a></li>
+                    <li><a href="/kod-html/medlem/bokning-medlem.html">Bokning</a></li>
+
+                </ul>
+            </li>
+
+            <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
+
+            <li><a href="/kod-html/restaurang.html">Restaurang</a></li>
+
+         
+
+            <li><a href="/kod-html/shop-index.html">Shop</a></li>
+        </ul>
+
+ <!-- Hamburgermeny för mindre skärmar -->
+<div class="hamburger-menu">
+            <input type="checkbox" id="menu-toggle" class="menu-toggle">
+            <label for="menu-toggle" class="hamburger-icon">&#9776;</label>
+            <ul class="hamburger-dropdown">
+                <li><a href="/kod-html/hem/index.html">Hem</a></li>
+                <li><a href="#">Spela golf</a>
+                    <ul class="dropdown-spela">
+                        <li><a href="/kod-html/spela-golf/foretag.html">Företag</a></li>
+                        <li><a href="/kod-html/spela-golf/gast.html">Gäst</a></li>
+                        <li><a href="/kod-html/spela-golf/grenfee-regler.html">Greenfee & Regler</a></li>
+                        <li id="four"><a href="/kod-html/spela-golf/tavlingar-evenemang/tavlingar-evenemang.html">Tävlingar/Evenemang</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Om oss</a>
+                    <ul class="dropdown">
+                        <li><a href="/kod-html/Omoss/visiontest2.html">Historia och vision</a></li>
+                        <li><a href="/kod-html/Omoss/banorna.html">Våra banor</a></li>
+                        <li><a href="/kod-html/Omoss/faciliteter.html">Faciliteter</a></li>
+                        <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
+                        <li><a href="/kod-html/Omoss/nyheter.html">Nyheter</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">Medlem</a>
+                    <ul class="dropdown-medlem">
+                        <li><a href="/kod-html/medlem/medlem.html">Logga in</a></li>
+                        <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
+                        <li><a href="/kod-html/medlem/medlem.html">Förmåner</a></li>
+                        <li><a href="/kod-html/medlem/bokning.html">Bokning</a></li>
+                    </ul>
+                </li>
+                <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
+                <li><a href="/kod-html/restaurang.html">Restaurang</a></li>
+                <li><a href="/kod-html/shop-index.html">Shop</a></li>
             </ul>
-        </li>
-
-        <li><a href="#">Om oss</a>
-            <ul class="dropdown">
-                <li><a href="#">Våra banor</a></li>
-                <li><a href="#">Faciliteter</a></li>
-                <li><a href="/kod-html/medlem/medlem.html">Medlem</a></li>
-                <li><a href="#">Nyheter</a></li>
-            </ul>
-        </li>
-
-        <li><a href="/kod-html/medlem/medlem.html">Medlem</a>
-            <ul class="dropdown-medlem">
-                <li><a href="/kod-html/medlem/medlem.html"></a></li>
-                <li><a href="/kod-html/medlem/createnewmember.html">Bli medlem</a></li>
-                <li><a href="/kod-html/medlem/medlem.html">Förmåner</a></li>
-                <li><a href="#">Bokning</a></li>
-            </ul>
-        </li>
-
-        <li><a href="/kod-html/kontakt/kontakt.html">Kontakt</a></li>
-        <li><a href="#">Restaurang | Shop</a></li>
-    </ul>
-</div>
-<!----Adinas nav del slut---->
+        </div>
+    </div>
+   <!-- Adinas nav del slut -->
 
     <div class="header-image">
         <img src="/bilder/kontakt-header.jpg" alt="Golfklubb Header Image">
